--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">circlespawn</string>
+    <string name="app_name">LibGDX Kotlin Example</string>
+    <string name="logout_succeed">Logout Succeeded</string>
+    <string name="login_succeed">Login Succeeded</string>
+    <string name="login_failed">Login Failed</string>
 
 </resources>
